SAK-6379
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@15445 66ffb92e-73f9-0310-93c1-f5514f145a0a